--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
 <body>
   <h1>Voici le site Hello World</h1>
-  <h2>Il est vraiment génial</h2>
+  <h2>Il est vraiment génial !</h2>
 </body>
 </html>
